--- a/package.json
+++ b/package.json
@@ -1,23 +1,35 @@
 {
-  "name": "matters-altra",
+  "name": "maltaa",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "sh dev/dev.sh"
+    "start": "sh dev/dev.sh",
+    "make": "sh dev/make.sh",
+    "push": "sh ops/push.sh",
+    "deploy": "sh ops/deploy.sh",
+    "deploy_nginx": "sh ops/deploy_nginx.sh"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "@types/isomorphic-fetch": "0.0.35",
     "@types/koa": "^2.11.2",
+    "@types/koa-logger": "^3.1.1",
     "@types/koa-router": "^7.4.0",
     "@types/mongodb": "^3.5.2",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/uuid": "^7.0.0",
+    "@types/yargs": "^15.0.4",
+    "css-loader": "^3.4.2",
+    "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "pm2": "^4.2.3",
+    "style-loader": "^1.1.3",
+    "terser-webpack-plugin": "^2.3.5",
     "ts-loader": "^6.2.1",
     "typescript": "^3.8.3",
     "webpack": "^4.42.0",
@@ -26,14 +38,18 @@
   },
   "dependencies": {
     "apollo-boost": "^0.4.7",
+    "argv": "0.0.2",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
     "isomorphic-fetch": "^2.2.1",
     "koa": "^2.11.0",
+    "koa-body": "^4.1.1",
+    "koa-logger": "^3.2.1",
     "koa-router": "^8.0.8",
     "mongodb": "^3.5.5",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "reinspect": "^1.1.0",
     "uuid": "^7.0.2"
   }
 }
