--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "target": "es2018",
         "module": "commonjs",
         "outDir": "built",
-        "jsx": "react"
+        "jsx": "react",
+        "sourceMap": false
     }
 }
