--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,16 @@
         "outDir": "built",
         "jsx": "react",
         "sourceMap": false
-    }
+    },
+    "files":  [
+        "src/server/restlike-api.ts",
+        "src/server/action-api.ts",
+        "src/server/spider.ts"
+    ],
+    "include": [
+        "src/server/migration/*.ts"
+    ],
+    "exclude": [
+        "node_modules"
+    ]
 }
