--- a/tsconfig.prod.server.json
+++ b/tsconfig.prod.server.json
@@ -1,18 +1,7 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "./tsconfig.dev.server.json",
   "compilerOptions": {
     "outDir": "built/dist/server",
     "sourceMap": false
-  },
-  "files":  [
-    "src/server/restlike-api.ts",
-    "src/server/action-api.ts",
-    "src/server/spider.ts"
-  ],
-  "include": [
-    "src/server/migration/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  }
 }
